--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-scala_2.11</artifactId>
             <version>1.11.1</version>
@@ -99,6 +109,7 @@
             <artifactId>flink-csv</artifactId>
             <version>1.11.1</version>
         </dependency>
+
 
 
     </dependencies>
